--- a/lf_fgo.html
+++ b/lf_fgo.html
@@ -125,14 +125,14 @@
 </head>
 <body>
 <ul>
-    <li><img src="picture/fgo冲田总司.png" alt=""></li>
-    <li><img src="picture/fgo黑呆.png" alt=""></li>
-    <li><img src="picture/fgo呆毛王.png" alt=""></li>
-    <li><img src="picture/fgo宫本武藏.png" alt=""></li>
-    <li><img src="picture/fgo骑呆.png" alt=""></li>
-    <li><img src="picture/fgo水呆.png" alt=""></li>
+    <li><img src="fgo/image/fgo1.png" alt=""></li>
+    <li><img src="fgo/image/fgo2.png" alt=""></li>
+    <li><img src="fgo/image/fgo3.png" alt=""></li>
+    <li><img src="fgo/image/fgo4.png" alt=""></li>
+    <li><img src="fgo/image/fgo5.png" alt=""></li>
+    <li><img src="fgo/image/fgo6.png" alt=""></li>
 </ul>
-<img src="picture/33.png" class="b">
-<audio src="music/Aimer%20-%20LAST%20STARDUST.mp3" autoplay="autoplay" loop="loop"></audio>
+<img src="fgp/image/33.png" class="b">
+<audio src="fgo/Aimer%20-%20LAST%20STARDUST.mp3" autoplay="autoplay" loop="loop"></audio>
 </body>
 </html>
