--- a/lf_fgo.html
+++ b/lf_fgo.html
@@ -9,7 +9,7 @@
             padding:0;
         }
         body{
-            background: url("picture/skh.jpg") no-repeat;
+            background: url("fgo/image/skh.jpg") no-repeat;
             background-size:cover;
             overflow: hidden;
         }
@@ -133,6 +133,6 @@
     <li><img src="fgo/image/fgo6.png" alt=""></li>
 </ul>
 <img src="fgp/image/33.png" class="b">
-<audio src="fgo/Aimer%20-%20LAST%20STARDUST.mp3" autoplay="autoplay" loop="loop"></audio>
+<audio src="fgo/Aimer - Brave Shine.mp3" autoplay="autoplay" loop="loop"></audio>
 </body>
 </html>
