--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <li><img src="fgo/image/fgo5.png" alt=""></li>
     <li><img src="fgo/image/fgo6.png" alt=""></li>
 </ul>
-<img src="fgp/image/33.png" class="b">
+<img src="fgo/image/33.png" class="b">
 <audio src="fgo/Aimer - Brave Shine.mp3" autoplay="autoplay" loop="loop"></audio>
 </body>
 </html>
