--- a/index.html
+++ b/index.html
@@ -71,10 +71,7 @@
             transform: scale(1.5);
         }
         @keyframes sport {
-            from{/*注意点：
-            动画中如果有和默认样式中同名的属性会覆盖默认样式的同名属性
-            在编写动画的时候，固定不变的值写在前面，需要变化的值写在后面
-            */
+            from{
                 transform: rotateX(-15deg) rotateY(0deg);
             }
             to{
