--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             padding:0;
         }
         body{
-            background: url("fgo/image/skh.jpg") no-repeat;
+            background: url("fgo/image/skh.jpg");
             background-size:contain;
             overflow: hidden;
         }
