--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
         body{
             background: url("fgo/image/skh.jpg");
-            background-size:contain;
+            background-size:cover;
             overflow: hidden;
         }
         ul{
