--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             padding:0;
         }
         body{
-            background: url("fgo/image/skh.jpg");
+            background: url("fgoBB.png") no-repeat;
             background-size:cover;
             overflow: hidden;
         }
